# nue_growth

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  worklog.md
agent-ctx/: 4a-pxs-navigation.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20240411_0001_create_user_table.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  auth.py  user.py
backend/app/tasks/: __init__.py  email.py
docs/: architecture.md
frontend/: .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/agent-ctx/: 4c-app-system.md  4d-transition-mobile.md
frontend/docs/: global-product-system.md
frontend/prisma/: schema.prisma  seed.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app-system/: providers.tsx
frontend/src/hooks/: use-action-feedback.tsx  use-animated-counter.tsx  use-drag-reorder.tsx  use-magnetic-cursor.tsx  use-swipe-gestures.tsx
frontend/src/lib/: api-client.ts  contacts-service.ts  http.ts  module-registry.ts  route.ts  use-contacts.ts
infra/docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
infra/nginx/: nginx.conf
scripts/: migrate.sh  seed.sh  setup.sh
shared/types/: auth.ts  package.json
(+507 files in other folders)
